@@ -22,14 +22,13 @@ import guerillabackup
 class Policy():
   """This class defines a policy instance."""
 
-  def __init__(self, resourceRegex, policyConfig):
+  def __init__(self, policyConfig):
     """Instantiate this policy object from a JSON policy configuration
     definition."""
     if not isinstance(policyConfig, dict):
       raise Exception(
           'Policy configuration has to be a dictionary: %s' % (
               repr(policyConfig)))
-    self.resourceRegex = resourceRegex
     self.policyName = policyConfig['Name']
     if not isinstance(self.policyName, str):
       raise Exception('Policy name has to be a string')
@@ -47,10 +46,6 @@ class Policy():
     policies with lower or equal priority."""
     return self.policyPriority
 
-  def isApplicableToSource(self, sourceName):
-    """Check if this policy is applicable to a given source."""
-    return self.resourceRegex.match(sourceName) is not None
-
   def apply(self, sourceStatus):
     """Apply this policy to a backup source status."""
     raise Exception('Abstract method called')
@@ -60,6 +55,47 @@ class Policy():
     marked for deletion and update status data of those elements
     kept to allow validation even after deletion of some elements."""
     raise Exception('Abstract method called')
+
+
+class PolicyGroup():
+  """A policy group is a list of policies to be applied to sources
+  matching a given regular expression."""
+
+  def __init__(self, groupConfig):
+    """Create a new policy configuration group."""
+    if not isinstance(groupConfig, dict):
+      raise Exception('Policies entry not a dictionary')
+    self.inheritFlag = True
+    self.resourceRegex = re.compile(groupConfig['Sources'])
+    if 'Inherit' in groupConfig:
+      self.inheritFlag = groupConfig['Inherit']
+      if not isinstance(self.inheritFlag, bool):
+        raise Exception(
+            'Inherit policy configuration flag has to be ' \
+            'true or false (defaults to true)')
+
+    self.policyList = []
+    for policyConfig in groupConfig['List']:
+      policy = {
+          PolicyTypeInterval.POLICY_NAME: PolicyTypeInterval,
+          PolicyTypeLevelRetention.POLICY_NAME: PolicyTypeLevelRetention
+      }.get(policyConfig['Name'], None)
+      if policy is None:
+        raise Exception(
+            'Unknown policy type "%s"' % policyConfig['Name'])
+      self.policyList.append(policy(policyConfig))
+
+  def isApplicableToSource(self, sourceName):
+    """Check if this policy is applicable to a given source."""
+    return self.resourceRegex.match(sourceName) is not None
+
+  def isPolicyInheritanceEnabled(self):
+    """Check if policy inheritance is enabled for this group."""
+    return self.inheritFlag
+
+  def getPolicies(self):
+    """Get the list of policies in this group."""
+    return self.policyList
 
 
 class PolicyTypeInterval(Policy):
@@ -652,25 +688,8 @@ class StorageConfig():
       raise Exception('Policies not a list')
 
     policyList = []
-    for policyGroup in policyConfig:
-      if not isinstance(policyGroup, dict):
-        raise Exception('Policies entry not a dictionary')
-      resourceRegexStr = policyGroup['Sources']
-      policyConfigList = policyGroup['List']
-      resourceRegex = re.compile(resourceRegexStr)
-
-      for policyConfigItem in policyConfigList:
-        if policyConfigItem is None:
-          policyList.append(None)
-        else:
-          policy = {
-              PolicyTypeInterval.POLICY_NAME: PolicyTypeInterval,
-              PolicyTypeLevelRetention.POLICY_NAME: PolicyTypeLevelRetention
-          }.get(policyConfigItem['Name'], None)
-          if policy is None:
-            raise Exception(
-                'Unknown policy type "%s"' % policyConfigItem['Name'])
-          policyList.append(policy(resourceRegex, policyConfigItem))
+    for policyGroupConfig in policyConfig:
+      policyList.append(PolicyGroup(policyGroupConfig))
     self.policyList = policyList
 
   def getDataDirectoryRelativePath(self, pathname):
@@ -722,26 +741,24 @@ class StorageConfig():
 # have started with a newly created list anyway.
       result = self.parentConfig.getSourcePolicies(sourceName)
 
-    for policy in self.policyList:
-# Ignore the empty entry which disabled policy inheritance before.
-      if policy is None:
-        continue
-
+    for policyGroup in self.policyList:
 # Ignore policies not matching the source.
-      if not policy.isApplicableToSource(sourceName):
+      if not policyGroup.isApplicableToSource(sourceName):
         continue
 
-      for refPos, refPolicy in enumerate(result):
-        refPolicy = result[refPos]
-        if refPolicy.getPolicyName() == policy.getPolicyName():
-          if refPolicy.getPriority() <= policy.getPriority():
-            result[refPos] = policy
-          policy = None
-          break
-      if policy is not None:
-        result.append(policy)
-      if len(result) == 0:
-        print('WARNING: no policies for %s' % sourceName)
+      if not policyGroup.isPolicyInheritanceEnabled():
+        result = []
+
+      for policy in policyGroup.getPolicies():
+        for refPos, refPolicy in enumerate(result):
+          refPolicy = result[refPos]
+          if refPolicy.getPolicyName() == policy.getPolicyName():
+            if refPolicy.getPriority() < policy.getPriority():
+              result[refPos] = policy
+            policy = None
+            break
+        if policy is not None:
+          result.append(policy)
     return result
 
 
