@@ -4,6 +4,8 @@ guerillabackup (0.4.0~rc-20230119) unstable; urgency=low
   * StorageTool:
     * Improved messages for interval policy violations and how to fix.
     * Warn about files not having any applicable policies defined.
+    * Made policy inheritance control more explicit, improved
+      documentation.
   Bugfixes:
   * BackupGenerator:
     * Fixed invalid executable path in systemd service templates.
@@ -20,7 +22,7 @@ guerillabackup (0.4.0~rc-20230119) unstable; urgency=low
       source.
     * Fixed error message typos.
 
- -- halfdog <me@halfdog.net>  Thu, 19 Jan 2023 11:37:23 +0000
+ -- halfdog <me@halfdog.net>  Thu, 19 Jan 2023 14:01:01 +0000
 
 guerillabackup (0.3.0) unstable; urgency=low
 
